src/tests/errors/lexing/test07.cmp
program main 
begin
       var begin := 1  (* keyword != identifier *)
end 